2016-03-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4l2): Changed field names
	following suggestion på Andreas.

	* Mscripts_database/q2_get_atm.m: WebApi now works.

2016-03-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Gave up on replacement lines and changed how spectrosocopic data
	are incorporated.

	* Polishing of setting for fmode 1, and a start on 21.

2016-02-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_precalc/q2_precalc_antenna.m:
	* Mscripts_precalc/q2_precalc_abslookup.m: Also updated.

2016-02-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_precalc/q2_precalc_fgrid.m: Updated to changes in Q.

	* Mscripts_database/l1b_homemade.m: Revised, but still far from
	complete. LOG now first output argument.

	* Mscripts_webapi/odin_webapi_vds_demo.m: Scripts had fmode 2
	hard-coded, despite "setting variable". Now no urls to screen.

2016-02-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Updated to changes in L1B frequency part. And some associated
	code improvements.

2016-02-08  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m: L2d changed.

	* Mscripts_arts/q2_arts_sensor_parts.m: Old mixer and backend, now
	treated as one part. Clearer handling of LO. 

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Some smaller changes and bug fixes.

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* More work on filling L2.

2016-02-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Added ztan and frequency croppting. Started on L2.

2016-02-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_arts/q2_inv.m (subfun4se): Introduced different models
	for correlation of noise between channels.

2016-02-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Added retrieval of frequency off-set and temperature. Better
	description of noise in Se.
